# miLLM

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-images.yml  sync-to-clean.yml
0xcc/adrs/: 000_PADR|miLLM.md
0xcc/docs/: miLLM_BRD_v1.0.md
0xcc/prds/: 000_PPRD|miLLM.md  001_FPRD|Model_Management.md  002_FPRD|OpenAI_API.md  003_FPRD|SAE_Management.md  004_FPRD|Feature_Steering.md  005_FPRD|Feature_Monitoring.md  006_FPRD|Profile_Management.md  007_FPRD|Admin_UI.md
0xcc/spec/: 001_SPEC_Software_Dependency.md  002_SPEC_Claude_Code_Standards.md  miLLM_UI.jsx
0xcc/tasks/: 001_FTASKS|Model_Management.md  002_FTASKS|OpenAI_API.md  003_FTASKS|SAE_Management.md  004_FTASKS|Feature_Steering.md  005_FTASKS|Feature_Monitoring.md  006_FTASKS|Profile_Management.md  007_FTASKS|Admin_UI.md
0xcc/tdds/: 001_FTDD|Model_Management.md  002_FTDD|OpenAI_API.md  003_FTDD|SAE_Management.md  004_FTDD|Feature_Steering.md  005_FTDD|Feature_Monitoring.md  006_FTDD|Profile_Management.md  007_FTDD|Admin_UI.md
0xcc/tids/: 001_FTID|Model_Management.md  002_FTID|OpenAI_API.md  003_FTID|SAE_Management.md  004_FTID|Feature_Steering.md  005_FTID|Feature_Monitoring.md  006_FTID|Profile_Management.md  007_FTID|Admin_UI.md
admin-ui/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
admin-ui/e2e/: model-workflow.spec.ts  navigation.spec.ts  profile-workflow.spec.ts  steering-workflow.spec.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/components/: index.ts
admin-ui/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  Select.tsx  Slider.tsx  Spinner.tsx  Toast.tsx  index.ts
admin-ui/src/components/dashboard/: QuickActions.tsx  StatusCard.tsx  index.ts
admin-ui/src/components/layout/: Header.tsx  (+2 more)
admin-ui/src/hooks/: index.ts  useModels.ts  useMonitoring.ts  useProfiles.ts  useSAE.ts  useSteering.ts  useToast.ts
admin-ui/src/pages/: DashboardPage.tsx  ModelsPage.tsx  MonitoringPage.tsx  ProfilesPage.tsx  SAEPage.tsx  SettingsPage.tsx  SteeringPage.tsx  index.ts
admin-ui/src/services/: api.ts  index.ts  socket.ts
admin-ui/src/stores/: index.ts  serverStore.ts  uiStore.ts
admin-ui/src/types/: api.ts  ui.ts
admin-ui/tests/: setup.ts
docs/: PERF_OPTIMIZATION_TASKS.md
frontend/: package.json
frontend/src/pages/: ModelsPage.test.tsx  ModelsPage.tsx
frontend/src/services/: api.ts  index.ts  modelService.test.ts  modelService.ts  socketService.ts
frontend/src/stores/: modelStore.test.ts  modelStore.ts
frontend/src/types/: api.ts  index.ts  model.ts
frontend/src/utils/: format.ts  index.ts
k8s/: millm-deployment.yaml
millm/: __init__.py  main.py
millm/api/: __init__.py  dependencies.py  exception_handlers.py
millm/api/routes/: __init__.py
millm/api/schemas/: __init__.py  common.py  model.py  monitoring.py  openai.py  profile.py  sae.py
millm/core/: __init__.py  config.py  error_messages.py  errors.py  logging.py  resilience.py
millm/db/: __init__.py  base.py
millm/db/migrations/: env.py
millm/db/models/: __init__.py  model.py  profile.py  sae.py
millm/db/repositories/: __init__.py  model_repository.py  profile_repository.py  sae_repository.py
millm/ml/: __init__.py  generation_config.py  memory_utils.py  model_downloader.py  model_loader.py  prefix_cache.py  sae_config.py  sae_downloader.py  sae_hooker.py  sae_loader.py  sae_wrapper.py
millm/services/: __init__.py  cbm_backend.py  inference_service.py  model_service.py  monitoring_service.py  profile_service.py  request_queue.py  sae_service.py
millm/sockets/: __init__.py  progress.py
nginx/: nginx.conf  nginx.ssl.conf
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_model_workflow.py
tests/fixtures/sae/: sample_config.json
tests/integration/: __init__.py  test_model_api.py  test_monitoring_flow.py  test_profile_workflow.py  test_steering_workflow.py  test_websocket_events.py
tests/integration/api/: test_chat_completions.py  test_completions.py  test_embeddings.py  test_health.py  test_models.py
tests/performance/: test_api_performance.py
tests/unit/: __init__.py
tests/unit/api/: test_exception_handlers.py  test_generation_config.py  test_openai_errors.py  test_openai_schemas.py
tests/unit/core/: test_retry.py
tests/unit/db/: test_model_repository.py
tests/unit/ml/: __init__.py  test_memory_utils.py  test_model_downloader.py  test_model_loader.py  test_sae_config.py  test_sae_downloader.py  test_sae_hooker.py  test_sae_loader.py  test_sae_wrapper.py
tests/unit/services/: test_cbm_backend.py  test_inference_service.py  test_model_service.py  test_monitoring_service.py  test_profile_service.py  test_request_queue.py  test_sae_service.py
tests/unit/sockets/: __init__.py  test_progress.py
(+70 files in other folders)
